--- a/main.css
+++ b/main.css
@@ -10,6 +10,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 20px;
 }
 
 .nav-links {
@@ -26,4 +27,8 @@ header {
     text-align: right;
     padding: 10px 20px;
     font-weight: bold;
+}
+
+.info {
+    display: none;
 }
